--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ exportMethods("rightContext<-")
 exportMethods("smtpPort<-")
 exportMethods("smtpServer<-")
 exportMethods(addPos)
+exportMethods(adjustEncoding)
 exportMethods(as.DocumentTermMatrix)
 exportMethods(as.TermContextMatrix)
 exportMethods(as.TermDocumentMatrix)
@@ -50,10 +51,12 @@ exportMethods(as.partitionCluster)
 exportMethods(as.sparseMatrix)
 exportMethods(barplot)
 exportMethods(browse)
+exportMethods(bughunt)
 exportMethods(collocations)
 exportMethods(context)
 exportMethods(cooccurrence)
 exportMethods(corpus)
+exportMethods(cpos)
 exportMethods(dispersion)
 exportMethods(egoNetwork)
 exportMethods(email)
@@ -61,6 +64,7 @@ exportMethods(encoding)
 exportMethods(enrich)
 exportMethods(filterType)
 exportMethods(frequencies)
+exportMethods(getEncoding)
 exportMethods(html)
 exportMethods(keyness)
 exportMethods(kwic)
@@ -87,6 +91,7 @@ exportMethods(sAttributes)
 exportMethods(scatterplot)
 exportMethods(score)
 exportMethods(show)
+exportMethods(size)
 exportMethods(smtpPort)
 exportMethods(smtpServer)
 exportMethods(split)
@@ -96,6 +101,7 @@ exportMethods(tag)
 exportMethods(terms)
 exportMethods(tf)
 exportMethods(trim)
+exportMethods(unique)
 exportMethods(weigh)
 exportMethods(zoom)
 import(methods)
@@ -109,6 +115,8 @@ importFrom(plyr,join)
 importFrom(rcqp,cqi_attribute_size)
 importFrom(rcqp,cqi_attributes)
 importFrom(rcqp,cqi_cpos2id)
+importFrom(rcqp,cqi_cpos2lbound)
+importFrom(rcqp,cqi_cpos2rbound)
 importFrom(rcqp,cqi_cpos2str)
 importFrom(rcqp,cqi_cpos2struc)
 importFrom(rcqp,cqi_dump_subcorpus)
