--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,8 +75,10 @@ exportMethods(kwicMetadata)
 exportMethods(kwicNo)
 exportMethods(label)
 exportMethods(leftContext)
+exportMethods(length)
 exportMethods(ll)
 exportMethods(mail)
+exportMethods(means)
 exportMethods(merge)
 exportMethods(metadata)
 exportMethods(minFrequency)
