--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(egoNetwork)
 export(flatten)
 export(partitionCluster)
 export(session)
+exportClasses(bundle)
 exportClasses(collocations)
 exportClasses(collocationsReshaped)
 exportClasses(context)
@@ -54,11 +55,13 @@ exportMethods(barplot)
 exportMethods(browse)
 exportMethods(bughunt)
 exportMethods(collocations)
+exportMethods(colnames)
 exportMethods(context)
 exportMethods(cooccurrence)
 exportMethods(cores)
 exportMethods(corpus)
 exportMethods(cpos)
+exportMethods(dim)
 exportMethods(dispersion)
 exportMethods(egoNetwork)
 exportMethods(email)
@@ -68,6 +71,7 @@ exportMethods(filterType)
 exportMethods(frequencies)
 exportMethods(getEncoding)
 exportMethods(getTerms)
+exportMethods(head)
 exportMethods(html)
 exportMethods(keyness)
 exportMethods(kwic)
@@ -92,6 +96,7 @@ exportMethods(project)
 exportMethods(read)
 exportMethods(restore)
 exportMethods(rightContext)
+exportMethods(rownames)
 exportMethods(sAttributes)
 exportMethods(scatterplot)
 exportMethods(score)
@@ -103,6 +108,7 @@ exportMethods(split)
 exportMethods(store)
 exportMethods(summary)
 exportMethods(tag)
+exportMethods(tail)
 exportMethods(terms)
 exportMethods(tf)
 exportMethods(trim)
@@ -113,9 +119,11 @@ import(methods)
 importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
 importFrom(Matrix,sparseMatrix)
+importFrom(data.table,rbindlist)
 importFrom(parallel,mccollect)
 importFrom(parallel,mclapply)
 importFrom(parallel,mcparallel)
+importFrom(plyr,ddply)
 importFrom(plyr,join)
 importFrom(rcqp,cqi_attribute_size)
 importFrom(rcqp,cqi_attributes)
