--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ exportMethods(as.markdown)
 exportMethods(as.matrix)
 exportMethods(as.partitionCluster)
 exportMethods(as.sparseMatrix)
+exportMethods(bapply)
 exportMethods(barplot)
 exportMethods(browse)
 exportMethods(bughunt)
