--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: polmineR
 Type: Package
 Title: polmineR
-Version: 0.4.54
-Date: 2015-05-09
+Version: 0.4.56
+Date: 2015-06-09
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
 Imports:
@@ -82,6 +82,7 @@ Collate:
     'll-method.R'
     'mail-method.R'
     'means-method.R'
+    'pAttributes-method.R'
     'partition-method.R'
     'session-class.R'
     'store-method.R'
@@ -103,5 +104,6 @@ Collate:
     'tf-method.R'
     'trim-method.R'
     'utils.R'
+    'view-method.R'
     'weigh-method.R'
     'zoom-method.R'
