--- a/NAMESPACE
+++ b/NAMESPACE
@@ -156,3 +156,4 @@ importFrom(tm,as.DocumentTermMatrix)
 importFrom(tm,as.TermDocumentMatrix)
 importFrom(tm,nDocs)
 importFrom(tm,stopwords)
+importMethodsFrom(rcqp,size)
