bug fix for dispersion

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -96,6 +96,7 @@ exportMethods(partition)
 exportMethods(posFilter)
 exportMethods(project)
 exportMethods(read)
+exportMethods(rel)
 exportMethods(restore)
 exportMethods(rightContext)
 exportMethods(rownames)
