--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: polmineR
 Type: Package
 Title: polmineR
-Version: 0.4.57
-Date: 2015-06-13
+Version: 0.4.58
+Date: 2015-07-02
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
 Imports:
@@ -32,78 +32,161 @@ Description: Tools for drilling and mining CWB corpora. The package offers
     procedures.
 License: CC BY-NC-SA 4.0 | file LICENSE
 Collate:
-    'TermDocumentMatrix-methods.R'
+    'TermDocumentMatrix-
+    methods.R'
+    'session-
+    class.R'
     'generics.R'
-    'polmineR-package.R'
-    'partition-class.R'
-    'bundle-class.R'
-    'partitionCluster-class.R'
-    'textstat-class.R'
-    'keyness-class.R'
-    'addPos-method.R'
-    'adjustEncoding-method.R'
-    'as.markdown-method.R'
-    'kwic-class.R'
-    'context-class.R'
-    'browse-method.R'
-    'bughunt-method.R'
-    'chisquare-method.R'
-    'contextCluster-class.R'
-    'collocations-class.R'
-    'coerce-methods.R'
-    'collocations-method.R'
-    'collocations-methods.R'
-    'collocationsCluster-class.R'
-    'collocationsCluster-methods.R'
-    'collocationsReshaped-class.R'
-    'collocationsReshaped-methods.R'
-    'context-method.R'
-    'context-methods.R'
-    'contextCluster-methods.R'
-    'cooccurrence-method.R'
-    'cpos-method.R'
-    'crosstab-class.R'
-    'crosstab-methods.R'
-    'dispersion-method.R'
-    'egoNetwork-method.R'
-    'encoding-method.R'
-    'keynessCluster-class.R'
-    'enrich-method.R'
-    'frequencies-method.R'
-    'getEncoding-method.R'
-    'getTerms-method.R'
-    'html-method.R'
-    'html-methods.R'
-    'keyness-method.R'
-    'keyness-methods.R'
-    'keynessCluster-methods.R'
-    'kwic-method.R'
-    'kwic-methods.R'
-    'll-method.R'
-    'mail-method.R'
-    'means-method.R'
-    'pAttributes-method.R'
-    'partition-method.R'
-    'session-class.R'
-    'store-method.R'
-    'session-methods.R'
-    'partition-methods.R'
-    'partitionCluster-method.R'
-    'partitionCluster-methods.R'
-    'plot-method.R'
-    'pmi-method.R'
-    'read-method.R'
-    'restore-method.R'
-    'sAttributes-method.R'
-    'scatterplot-method.R'
-    'score-method.R'
+    'polmineR-
+    package.R'
+    'partition-
+    class.R'
+    'bundle-
+    class.R'
+    'partitionCluster-
+    class.R'
+    'textstat-
+    class.R'
+    'keyness-
+    class.R'
+    'addPos-
+    method.R'
+    'adjustEncoding-
+    method.R'
+    'as.mallet-
+    method.R'
+    'as.markdown-
+    method.R'
+    'kwic-
+    class.R'
+    'context-
+    class.R'
+    'browse-
+    method.R'
+    'bughunt-
+    method.R'
+    'chisquare-
+    method.R'
+    'contextCluster-
+    class.R'
+    'collocations-
+    class.R'
+    'coerce-
+    methods.R'
+    'collocations-
+    method.R'
+    'collocations-
+    methods.R'
+    'collocationsCluster-
+    class.R'
+    'collocationsCluster-
+    methods.R'
+    'collocationsReshaped-
+    class.R'
+    'collocationsReshaped-
+    methods.R'
+    'context-
+    method.R'
+    'context-
+    methods.R'
+    'contextCluster-
+    methods.R'
+    'cooccurrence-
+    method.R'
+    'cpos-
+    method.R'
+    'crosstab-
+    class.R'
+    'crosstab-
+    methods.R'
+    'ctm-
+    method.R'
+    'dispersion-
+    class.R'
+    'dispersion-
+    method.R'
+    'egoNetwork-
+    method.R'
+    'encoding-
+    method.R'
+    'keynessCluster-
+    class.R'
+    'enrich-
+    method.R'
+    'frequencies-
+    method.R'
+    'getEncoding-
+    method.R'
+    'getTerms-
+    method.R'
+    'getTokenStream-
+    method.R'
+    'html-
+    method.R'
+    'html-
+    methods.R'
+    'keyness-
+    method.R'
+    'keyness-
+    methods.R'
+    'keynessCluster-
+    methods.R'
+    'kwic-
+    method.R'
+    'kwic-
+    methods.R'
+    'll-
+    method.R'
+    'mail-
+    method.R'
+    'means-
+    method.R'
+    'pAttributes-
+    method.R'
+    'partition-
+    method.R'
+    'store-
+    method.R'
+    'session-
+    methods.R'
+    'partition-
+    methods.R'
+    'partitionCluster-
+    method.R'
+    'partitionCluster-
+    methods.R'
+    'plot-
+    method.R'
+    'pmi-
+    method.R'
+    'read-
+    method.R'
+    'registry.R'
+    'restore-
+    method.R'
+    'sAttributes-
+    method.R'
+    'scatterplot-
+    method.R'
+    'score-
+    method.R'
     'tTest.R'
-    'tag-method.R'
-    'terms-method.R'
-    'textstat-methods.R'
-    'tf-method.R'
-    'trim-method.R'
+    'tag-
+    method.R'
+    'terms-
+    method.R'
+    'textstat-
+    methods.R'
+    'tf-
+    method.R'
+    'trim-
+    method.R'
+    'use-
+    method.R'
     'utils.R'
-    'view-method.R'
-    'weigh-method.R'
-    'zoom-method.R'
+    'view-
+    method.R'
+    'weigh-
+    method.R'
+    'zoom-
+    method.R'
