--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,12 +7,14 @@ export(datesPeriod)
 export(egoNetwork)
 export(flatten)
 export(partitionCluster)
+export(resetRegistry)
 export(session)
 exportClasses(bundle)
 exportClasses(collocations)
 exportClasses(collocationsReshaped)
 exportClasses(context)
 exportClasses(crosstab)
+exportClasses(dispersion)
 exportClasses(keyness)
 exportClasses(keynessCollocations)
 exportClasses(kwic)
@@ -47,6 +49,7 @@ exportMethods(as.DocumentTermMatrix)
 exportMethods(as.TermContextMatrix)
 exportMethods(as.TermDocumentMatrix)
 exportMethods(as.data.frame)
+exportMethods(as.mallet)
 exportMethods(as.markdown)
 exportMethods(as.matrix)
 exportMethods(as.partitionCluster)
@@ -72,6 +75,7 @@ exportMethods(filterType)
 exportMethods(frequencies)
 exportMethods(getEncoding)
 exportMethods(getTerms)
+exportMethods(getTokenStream)
 exportMethods(head)
 exportMethods(html)
 exportMethods(keyness)
@@ -116,10 +120,12 @@ exportMethods(terms)
 exportMethods(tf)
 exportMethods(trim)
 exportMethods(unique)
+exportMethods(use)
 exportMethods(view)
 exportMethods(weigh)
 exportMethods(zoom)
 import(methods)
+importClassesFrom(rJava,jobjRef)
 importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
 importFrom(Matrix,sparseMatrix)
