--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,6 @@ exportClasses(bundle)
 exportClasses(collocations)
 exportClasses(collocationsReshaped)
 exportClasses(context)
-exportClasses(crosstab)
 exportClasses(dispersion)
 exportClasses(keyness)
 exportClasses(keynessCollocations)
@@ -45,7 +44,6 @@ exportMethods("smtpPort<-")
 exportMethods("smtpServer<-")
 exportMethods(addPos)
 exportMethods(adjustEncoding)
-exportMethods(as.DocumentTermMatrix)
 exportMethods(as.TermContextMatrix)
 exportMethods(as.TermDocumentMatrix)
 exportMethods(as.data.frame)
@@ -67,6 +65,7 @@ exportMethods(corpus)
 exportMethods(cpos)
 exportMethods(dim)
 exportMethods(dispersion)
+exportMethods(dissect)
 exportMethods(egoNetwork)
 exportMethods(email)
 exportMethods(encoding)
@@ -125,7 +124,6 @@ exportMethods(view)
 exportMethods(weigh)
 exportMethods(zoom)
 import(methods)
-importClassesFrom(rJava,jobjRef)
 importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
 importFrom(Matrix,sparseMatrix)
