rework of documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,7 +85,6 @@ exportMethods(label)
 exportMethods(leftContext)
 exportMethods(length)
 exportMethods(ll)
-exportMethods(mail)
 exportMethods(means)
 exportMethods(merge)
 exportMethods(metadata)
@@ -124,6 +123,7 @@ exportMethods(view)
 exportMethods(weigh)
 exportMethods(zoom)
 import(methods)
+importClassesFrom(rJava,jobjRef)
 importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
 importFrom(Matrix,sparseMatrix)
