--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ Imports:
     slam,
     parallel,
     plyr,
-    data.table
+    data.table,
+    rJava
 Suggests:
     polmineR.sampleCorpus,
     markdown,
@@ -24,8 +25,7 @@ Suggests:
     koRpus,
     chron,
     knitr,
-    polmineR.plpr,
-    rJava
+    polmineR.plpr
 VignetteBuilder: knitr
 LazyData: yes
 Description: Tools for drilling and mining CWB corpora. The package offers
