--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(collocations)
 export(datesPeriod)
 export(egoNetwork)
 export(flatten)
-export(partitionCluster)
+export(partitionBundle)
 export(resetRegistry)
 export(session)
 exportClasses(bundle)
@@ -18,7 +18,7 @@ exportClasses(keyness)
 exportClasses(keynessCollocations)
 exportClasses(kwic)
 exportClasses(partition)
-exportClasses(partitionCluster)
+exportClasses(partitionBundle)
 exportClasses(session)
 exportClasses(textstat)
 exportMethods("+")
@@ -50,7 +50,7 @@ exportMethods(as.data.frame)
 exportMethods(as.mallet)
 exportMethods(as.markdown)
 exportMethods(as.matrix)
-exportMethods(as.partitionCluster)
+exportMethods(as.partitionBundle)
 exportMethods(as.sparseMatrix)
 exportMethods(bapply)
 exportMethods(barplot)
