--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,12 +30,12 @@ exportMethods("email<-")
 exportMethods("filterType<-")
 exportMethods("kwicMetadata<-")
 exportMethods("kwicNo<-")
-exportMethods("label<-")
 exportMethods("leftContext<-")
 exportMethods("metadata<-")
 exportMethods("minFrequency<-")
 exportMethods("minSignificance<-")
 exportMethods("multicore<-")
+exportMethods("name<-")
 exportMethods("pAttribute<-")
 exportMethods("posFilter<-")
 exportMethods("project<-")
@@ -81,7 +81,6 @@ exportMethods(keyness)
 exportMethods(kwic)
 exportMethods(kwicMetadata)
 exportMethods(kwicNo)
-exportMethods(label)
 exportMethods(leftContext)
 exportMethods(length)
 exportMethods(ll)
@@ -91,6 +90,7 @@ exportMethods(metadata)
 exportMethods(minFrequency)
 exportMethods(minSignificance)
 exportMethods(multicore)
+exportMethods(name)
 exportMethods(names)
 exportMethods(pAttribute)
 exportMethods(pAttributes)
