use-function reworked

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(flatten)
 export(partitionBundle)
 export(resetRegistry)
 export(session)
+export(use)
 exportClasses(bundle)
 exportClasses(collocations)
 exportClasses(collocationsReshaped)
@@ -118,7 +119,6 @@ exportMethods(terms)
 exportMethods(tf)
 exportMethods(trim)
 exportMethods(unique)
-exportMethods(use)
 exportMethods(view)
 exportMethods(weigh)
 exportMethods(zoom)
