--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 export(.importPolMineCorpus)
 export(as.cqp)
-export(collocations)
+export(cooccurrences)
 export(datesPeriod)
 export(egoNetwork)
 export(flatten)
@@ -11,12 +11,13 @@ export(resetRegistry)
 export(session)
 export(use)
 exportClasses(bundle)
-exportClasses(collocations)
-exportClasses(collocationsReshaped)
 exportClasses(context)
+exportClasses(cooccurrences)
+exportClasses(cooccurrencesReshaped)
 exportClasses(dispersion)
+exportClasses(element)
 exportClasses(keyness)
-exportClasses(keynessCollocations)
+exportClasses(keynessCooccurrences)
 exportClasses(kwic)
 exportClasses(partition)
 exportClasses(partitionBundle)
@@ -25,6 +26,7 @@ exportClasses(textstat)
 exportMethods("+")
 exportMethods("[")
 exportMethods("[[")
+exportMethods("browse<-")
 exportMethods("cores<-")
 exportMethods("corpus<-")
 exportMethods("email<-")
@@ -37,6 +39,7 @@ exportMethods("minFrequency<-")
 exportMethods("minSignificance<-")
 exportMethods("multicore<-")
 exportMethods("name<-")
+exportMethods("names<-")
 exportMethods("pAttribute<-")
 exportMethods("posFilter<-")
 exportMethods("project<-")
@@ -57,10 +60,10 @@ exportMethods(bapply)
 exportMethods(barplot)
 exportMethods(browse)
 exportMethods(bughunt)
-exportMethods(collocations)
 exportMethods(colnames)
 exportMethods(context)
 exportMethods(cooccurrence)
+exportMethods(cooccurrences)
 exportMethods(cores)
 exportMethods(corpus)
 exportMethods(cpos)
@@ -93,6 +96,7 @@ exportMethods(minSignificance)
 exportMethods(multicore)
 exportMethods(name)
 exportMethods(names)
+exportMethods(nrow)
 exportMethods(pAttribute)
 exportMethods(pAttributes)
 exportMethods(partition)
@@ -102,6 +106,7 @@ exportMethods(read)
 exportMethods(rel)
 exportMethods(restore)
 exportMethods(rightContext)
+exportMethods(round)
 exportMethods(rownames)
 exportMethods(sAttributes)
 exportMethods(scatterplot)
@@ -124,10 +129,13 @@ exportMethods(weigh)
 exportMethods(zoom)
 import(methods)
 importClassesFrom(rJava,jobjRef)
+importFrom(DT,datatable)
+importFrom(DT,formatStyle)
 importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
 importFrom(Matrix,sparseMatrix)
 importFrom(data.table,rbindlist)
+importFrom(magrittr,"%>%")
 importFrom(parallel,mccollect)
 importFrom(parallel,mclapply)
 importFrom(parallel,mcparallel)
