--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(datesPeriod)
 export(egoNetwork)
 export(flatten)
 export(partitionBundle)
+export(readRegistry)
 export(resetRegistry)
 export(session)
 export(use)
@@ -50,6 +51,7 @@ exportMethods(addPos)
 exportMethods(adjustEncoding)
 exportMethods(as.TermContextMatrix)
 exportMethods(as.TermDocumentMatrix)
+exportMethods(as.bundle)
 exportMethods(as.data.frame)
 exportMethods(as.mallet)
 exportMethods(as.markdown)
@@ -77,6 +79,7 @@ exportMethods(enrich)
 exportMethods(filterType)
 exportMethods(frequencies)
 exportMethods(getEncoding)
+exportMethods(getTermFrequencyMatrix)
 exportMethods(getTerms)
 exportMethods(getTokenStream)
 exportMethods(head)
