before moving tf-slot as data.table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ exportMethods(getTermFrequencyMatrix)
 exportMethods(getTerms)
 exportMethods(getTokenStream)
 exportMethods(head)
+exportMethods(hist)
 exportMethods(html)
 exportMethods(keyness)
 exportMethods(kwic)
@@ -130,6 +131,7 @@ exportMethods(unique)
 exportMethods(view)
 exportMethods(weigh)
 exportMethods(zoom)
+import(data.table)
 import(methods)
 importClassesFrom(rJava,jobjRef)
 importFrom(DT,datatable)
@@ -137,7 +139,6 @@ importFrom(DT,formatStyle)
 importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
 importFrom(Matrix,sparseMatrix)
-importFrom(data.table,rbindlist)
 importFrom(magrittr,"%>%")
 importFrom(parallel,mccollect)
 importFrom(parallel,mclapply)
