intermediate commit at essen

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,7 +79,7 @@ exportMethods(enrich)
 exportMethods(filterType)
 exportMethods(frequencies)
 exportMethods(getEncoding)
-exportMethods(getTermFrequencyMatrix)
+exportMethods(getTermFrequencies)
 exportMethods(getTerms)
 exportMethods(getTokenStream)
 exportMethods(head)
@@ -111,7 +111,6 @@ exportMethods(rel)
 exportMethods(restore)
 exportMethods(rightContext)
 exportMethods(round)
-exportMethods(rownames)
 exportMethods(sAttributes)
 exportMethods(scatterplot)
 exportMethods(score)
@@ -130,7 +129,6 @@ exportMethods(trim)
 exportMethods(unique)
 exportMethods(view)
 exportMethods(weigh)
-exportMethods(zoom)
 import(data.table)
 import(methods)
 importClassesFrom(rJava,jobjRef)
