--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,12 +14,11 @@ export(use)
 exportClasses(bundle)
 exportClasses(context)
 exportClasses(cooccurrences)
-exportClasses(cooccurrencesReshaped)
 exportClasses(dispersion)
-exportClasses(element)
 exportClasses(keyness)
 exportClasses(keynessCooccurrences)
 exportClasses(kwic)
+exportClasses(ngrams)
 exportClasses(partition)
 exportClasses(partitionBundle)
 exportClasses(session)
@@ -100,6 +99,7 @@ exportMethods(minSignificance)
 exportMethods(multicore)
 exportMethods(name)
 exportMethods(names)
+exportMethods(ngrams)
 exportMethods(nrow)
 exportMethods(pAttribute)
 exportMethods(pAttributes)
