rework of cooccurrencs, data.table-related refactoring

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,11 +52,13 @@ exportMethods(as.TermContextMatrix)
 exportMethods(as.TermDocumentMatrix)
 exportMethods(as.bundle)
 exportMethods(as.data.frame)
+exportMethods(as.data.table)
 exportMethods(as.mallet)
 exportMethods(as.markdown)
 exportMethods(as.matrix)
 exportMethods(as.partitionBundle)
 exportMethods(as.sparseMatrix)
+exportMethods(as.utf8)
 exportMethods(bapply)
 exportMethods(barplot)
 exportMethods(browse)
@@ -118,8 +120,10 @@ exportMethods(show)
 exportMethods(size)
 exportMethods(smtpPort)
 exportMethods(smtpServer)
+exportMethods(sort)
 exportMethods(split)
 exportMethods(store)
+exportMethods(subset)
 exportMethods(summary)
 exportMethods(tag)
 exportMethods(tail)
