--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(datesPeriod)
 export(egoNetwork)
 export(flatten)
 export(partitionBundle)
+export(punctuation)
 export(readRegistry)
 export(resetRegistry)
 export(session)
@@ -68,15 +69,18 @@ exportMethods(cooccurrence)
 exportMethods(cooccurrences)
 exportMethods(cores)
 exportMethods(corpus)
+exportMethods(count)
 exportMethods(cpos)
 exportMethods(dim)
 exportMethods(dispersion)
 exportMethods(dissect)
+exportMethods(dotChart)
 exportMethods(egoNetwork)
 exportMethods(email)
 exportMethods(encoding)
 exportMethods(enrich)
 exportMethods(filterType)
+exportMethods(freq)
 exportMethods(frequencies)
 exportMethods(getEncoding)
 exportMethods(getTermFrequencies)
@@ -108,7 +112,6 @@ exportMethods(partition)
 exportMethods(posFilter)
 exportMethods(project)
 exportMethods(read)
-exportMethods(rel)
 exportMethods(restore)
 exportMethods(rightContext)
 exportMethods(round)
@@ -127,7 +130,6 @@ exportMethods(summary)
 exportMethods(tag)
 exportMethods(tail)
 exportMethods(terms)
-exportMethods(tf)
 exportMethods(trim)
 exportMethods(unique)
 exportMethods(view)
