--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: polmineR
 Type: Package
 Title: polmineR
-Version: 0.5.11
-Date: 2015-12-16
+Version: 0.5.12
+Date: 2015-12-21
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
 Imports:
@@ -27,7 +27,9 @@ Suggests:
     koRpus,
     chron,
     knitr,
-    polmineR.plpr
+    polmineR.plpr,
+    bigmemory,
+    bigmatrix
 VignetteBuilder: knitr
 LazyData: yes
 Description: Tools for drilling and mining CWB corpora. The package offers
