--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: polmineR
 Type: Package
 Title: polmineR
-Version: 0.5.13
-Date: 2016-01-09
+Version: 0.5.14
+Date: 2016-01-11
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
 Imports:
@@ -114,4 +114,5 @@ Collate:
     'utils.R'
     'view_method.R'
     'weigh_method.R'
+    'highlight_method.R'
 RoxygenNote: 5.0.1
