--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(cooccurrences)
 export(datesPeriod)
 export(egoNetwork)
 export(flatten)
+export(parseInfoFile)
+export(parseRegistry)
 export(partitionBundle)
 export(punctuation)
 export(readRegistry)
