--- a/NAMESPACE
+++ b/NAMESPACE
@@ -168,6 +168,7 @@ importFrom(rcqp,cqi_struc2str)
 importFrom(slam,as.simple_triplet_matrix)
 importFrom(slam,col_sums)
 importFrom(slam,row_sums)
+importFrom(slam,simple_triplet_matrix)
 importFrom(tm,DocumentTermMatrix)
 importFrom(tm,TermDocumentMatrix)
 importFrom(tm,as.DocumentTermMatrix)
