--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(cooccurrences)
 export(datesPeriod)
 export(egoNetwork)
 export(flatten)
+export(papply)
 export(parseInfoFile)
 export(parseRegistry)
 export(partitionBundle)
@@ -37,7 +38,7 @@ exportMethods("email<-")
 exportMethods("filterType<-")
 exportMethods("kwicMetadata<-")
 exportMethods("kwicNo<-")
-exportMethods("leftContext<-")
+exportMethods("left<-")
 exportMethods("metadata<-")
 exportMethods("minFrequency<-")
 exportMethods("minSignificance<-")
@@ -46,7 +47,7 @@ exportMethods("name<-")
 exportMethods("names<-")
 exportMethods("pAttribute<-")
 exportMethods("project<-")
-exportMethods("rightContext<-")
+exportMethods("right<-")
 exportMethods("smtpPort<-")
 exportMethods("smtpServer<-")
 exportMethods(adjustEncoding)
@@ -64,6 +65,7 @@ exportMethods(bapply)
 exportMethods(barplot)
 exportMethods(browse)
 exportMethods(bughunt)
+exportMethods(characterCount)
 exportMethods(chisquare)
 exportMethods(colnames)
 exportMethods(compare)
@@ -95,7 +97,7 @@ exportMethods(html)
 exportMethods(kwic)
 exportMethods(kwicMetadata)
 exportMethods(kwicNo)
-exportMethods(leftContext)
+exportMethods(left)
 exportMethods(length)
 exportMethods(ll)
 exportMethods(merge)
@@ -113,7 +115,7 @@ exportMethods(partition)
 exportMethods(project)
 exportMethods(read)
 exportMethods(restore)
-exportMethods(rightContext)
+exportMethods(right)
 exportMethods(round)
 exportMethods(sAttributes)
 exportMethods(scatterplot)
