shiny-app for kwic, bug fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ exportMethods(dim)
 exportMethods(dispersion)
 exportMethods(dissect)
 exportMethods(dotplot)
+exportMethods(duplicates)
 exportMethods(egoNetwork)
 exportMethods(email)
 exportMethods(encoding)
@@ -129,7 +130,6 @@ exportMethods(split)
 exportMethods(store)
 exportMethods(subset)
 exportMethods(summary)
-exportMethods(tag)
 exportMethods(tail)
 exportMethods(terms)
 exportMethods(trim)
