--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: polmineR
 Type: Package
 Title: polmineR
-Version: 0.5.16
-Date: 2016-01-16
+Version: 0.5.17
+Date: 2016-01-20
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
 Imports:
@@ -28,7 +28,8 @@ Suggests:
     chron,
     knitr,
     bigmemory,
-    bigtabulate
+    bigtabulate,
+    shiny
 VignetteBuilder: knitr
 LazyData: yes
 Description: Tools for drilling and mining CWB corpora. The package offers
@@ -112,7 +113,6 @@ Collate:
     'score_method.R'
     'similarity_method.R'
     'tTest.R'
-    'tag_method.R'
     'terms_method.R'
     'trim_method.R'
     'use_method.R'
