shiny app deployment

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ exportMethods(left)
 exportMethods(length)
 exportMethods(ll)
 exportMethods(merge)
+exportMethods(meta)
 exportMethods(metadata)
 exportMethods(minFrequency)
 exportMethods(minSignificance)
