--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: polmineR
 Type: Package
 Title: polmineR
-Version: 0.5.17
-Date: 2016-01-20
+Version: 0.5.18
+Date: 2016-01-22
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
 Imports:
@@ -29,7 +29,8 @@ Suggests:
     knitr,
     bigmemory,
     bigtabulate,
-    shiny
+    shiny,
+    miniUI
 VignetteBuilder: knitr
 LazyData: yes
 Description: Tools for drilling and mining CWB corpora. The package offers
@@ -94,6 +95,7 @@ Collate:
     'll_method.R'
     'mail_method.R'
     'means_method.R'
+    'meta_method.R'
     'pAttributes_method.R'
     'papply_function.R'
     'partitionBundle_method.R'
