--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(papply)
 export(parseInfoFile)
 export(parseRegistry)
 export(partitionBundle)
+export(partitionGadget)
 export(punctuation)
 export(readRegistry)
 export(resetRegistry)
