consolidation coerce-methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ exportMethods("right<-")
 exportMethods("smtpPort<-")
 exportMethods("smtpServer<-")
 exportMethods(adjustEncoding)
+exportMethods(as.DocumentTermMatrix)
 exportMethods(as.TermDocumentMatrix)
 exportMethods(as.bundle)
 exportMethods(as.data.frame)
